Project

General

Profile

Actions

Bug #23199

closed

radosgw coredump RGWGC::process

Added by Yong Wang about 6 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
% Done:

0%

Source:
Tags:
Backport:
mimic luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

radosgw coredump RGWGC::process

ceph version :10.2.10

============
The operation may be easy to saw again:
if delete some objects then delete related pool
radosgw will coredump at the gc runtime.

=====


Files

1111.png (185 KB) 1111.png Yong Wang, 03/02/2018 08:51 AM

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #37560: mimic: radosgw coredump RGWGC::processResolvedPrashant DActions
Copied to rgw - Backport #37561: luminous: radosgw coredump RGWGC::processResolvedPrashant DActions
Actions #1

Updated by Yong Wang about 6 years ago

backtrace please refer to 1111.png

Actions #2

Updated by John Spray about 6 years ago

  • Project changed from Ceph to rgw
  • Category deleted (ceph cli)
Actions #3

Updated by Yehuda Sadeh about 6 years ago

Does it still happen after restarting radosgw?

Actions #4

Updated by Matt Benjamin about 6 years ago

surprising to see this in v10.2.10, n.b., new async gc code is upstreamed to master and planned for backport

Matt

Actions #5

Updated by Yong Wang about 6 years ago

yes radosgw will coredump every a hours. the period just the gc thread scheduled timestamps.

I delted all omapkeys of the gc.* objects in the gc pool. it will be ok,not cordump again.

from backtrace ,it seems like to assign string with the invalid string external string ptr.

did have method configure systemd cordump with ceph?

I have test send kill -11 my a.out started systemd . but same way is invalid to radosgw and osd.

below is new setted in systemd configure files
LimitCORE=infinity

Actions #6

Updated by Yong Wang about 6 years ago

I have successful got the coredump configure with systemd.
If I get the string external information in the future,will paste it to here.

Actions #7

Updated by Matt Benjamin about 6 years ago

@Yehuda Sadeh points out that deleting the underlying pool during GC is difficult to support

Actions #8

Updated by Matt Benjamin about 6 years ago

  • Status changed from New to Triaged
Actions #11

Updated by Casey Bodley over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to mimic luminous
Actions #12

Updated by Nathan Cutler over 5 years ago

Actions #13

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37561: luminous: radosgw coredump RGWGC::process added
Actions #14

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF