rgw: rgwgc:process coredump in some special case。 Gc processes obja, objb, objc in order and pool of objb is deleted (obja and objc is in the same pool and pool exits). RGW will coredump as ctx->io_ctx_impl is an empty point during delete objc. Fixes:http://tracker.ceph.com/issues/23199

Signed-off-by: zhaokun <develop@hikdata.com>
(cherry picked from commit 575a7900660c7ec02250aa58cd88b2e02962e135)

Conflicts:
	src/rgw/rgw_gc.cc : Resolved in process